# skyblox

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
resources/blocks/: _all_blocks.txt  cobblestone.json  dirt.json  glass_block.json  glowstone.json  grass_block.json  red_glass_block.json  stone.json
resources/models/blocks/: cobblestone.json  cube.json  cube_column.json  cube_uniform.json  dirt.json  glass_block.json  glowstone.json  grass_block.json  red_glass_block.json  stone.json
resources/shaders/: blit.v.glsl  blockpick.f.glsl  blocks.f.glsl  blocks.v.glsl  combinegbuf.f.glsl  depthmap.v.glsl  lightvol.f.glsl  lightvol.v.glsl  null.f.glsl  sky.f.glsl  sky.v.glsl  skylight.f.glsl
resources/textures/: .gitignore
src/: CMakeLists.txt  main.c
src/include/: blox.h  ingame.h  nuklear_custom.h  render.h  util.h  world.h
src/ingame/: constructor.c  input_events.c  logic.c
src/render/: init.c  light.c  nuklear.c  render.c
src/util/: hashtable.c  physfs.c  queue.c  rbtree.c  shader.c  threadpool.c
src/world/: generate.c  render.c  resources.c  storage.c
